adding more styles

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="contact-menu-item">Contact</a></li>
             </ul>
         </nav>
         <div>
@@ -18,7 +18,7 @@
             <br/>
             <br/>
             <section>
-                <h2>This is my phone number: 01026424823</h2>
+                <h2>This is my phone number: <span class="phone-number">01026424823</span></h2>
             </section>
             <br/>
             <br/>
