--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="contact-menu-item">Contact</a></li>
             </ul>
         </nav>
         <div>
@@ -20,6 +20,7 @@
             <section>
                 <h2>This is the portfolio of Mohanad</h2>
             </section>
+            <img src="images/nature.jpg" alt="nature" width="300" height="300"/>
             <br/>
             <br/>
             <br/>
