--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html"  class="contact-menu-item">Contact</a></li>
             </ul>
         </nav>
         <div>
